<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black">


    <androidx.core.widget.NestedScrollView
        android:id="@+id/scroll"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:fillViewport="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="24dp">


            <FrameLayout
                android:id="@+id/imagePreview"
                android:layout_width="0dp"
                android:layout_height="280dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scaleType="centerCrop"
                    android:src="@drawable/cover" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="120dp"
                    android:layout_gravity="top"
                    android:background="@drawable/top_shadow" />

            </FrameLayout>


            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="36dp"
                android:layout_margin="12dp"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                app:layout_constraintBottom_toBottomOf="@id/imagePreview"
                app:layout_constraintStart_toStartOf="@id/imagePreview">

                <TextView
                    android:id="@+id/rating"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/badge_rounded"
                    android:drawableStart="@drawable/star"
                    android:drawablePadding="4dp"
                    android:paddingHorizontal="8dp"
                    android:paddingVertical="4dp"
                    android:text="@string/rating_example"
                    android:textColor="@android:color/white"
                    android:textSize="13sp" />

                <TextView
                    android:id="@+id/date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="6dp"
                    android:background="@drawable/badge_rounded"
                    android:paddingHorizontal="8dp"
                    android:paddingVertical="4dp"
                    android:text="@string/date_example"
                    android:textColor="@android:color/white"
                    android:textSize="13sp" />
            </LinearLayout>


            <TextView
                android:id="@+id/title"
                style="@style/TextTitleHeader"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:text="@string/course_title_example"
                android:textSize="24sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/imagePreview" />

            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/author_image"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="8dp"
                android:src="@drawable/author"
                app:layout_constraintBottom_toBottomOf="@+id/author_example"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/author"
                app:layout_constraintVertical_bias="1.0"
                app:shapeAppearanceOverlay="@style/CircleImageView" />

            <TextView
                android:id="@+id/author"
                style="@style/TextCourseDescription"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="48dp"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="20dp"
                android:text="@string/author"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@id/author_image"
                app:layout_constraintTop_toBottomOf="@id/title" />

            <TextView
                android:id="@+id/author_example"
                style="@style/TextCourseTitle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="48dp"
                android:layout_marginEnd="20dp"
                android:text="@string/merion_academy"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@id/author_image"
                app:layout_constraintTop_toBottomOf="@id/author" />


            <com.google.android.material.button.MaterialButton
                android:id="@+id/start_button"
                style="@style/ButtonGreen"
                app:backgroundTint="@color/green"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:layout_marginTop="24dp"
                android:text="@string/start_course"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/author_example" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/platform_button"
                style="@style/ButtonGray"
                app:backgroundTint="@color/background_dark_gray"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:layout_marginTop="12dp"
                android:text="@string/go_to_platform"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/start_button" />


            <TextView
                android:id="@+id/about_course"
                style="@style/TextTitleHeader"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:layout_marginTop="24dp"
                android:text="@string/about_course"
                android:textSize="24sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/platform_button" />

            <TextView
                style="@style/TextCourseDescription"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:layout_marginTop="8dp"
                android:text="@string/about_course_description"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/about_course" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>


    <ImageButton
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_margin="16dp"
        android:background="@drawable/button_rounded"
        android:contentDescription="@string/back_arrow"
        android:src="@drawable/arrow_back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_margin="16dp"
        android:background="@drawable/button_rounded"
        android:contentDescription="@string/add_to_favorites"
        android:src="@drawable/favorites"
        android:tint="@android:color/background_dark"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="UseAppTint" />

</androidx.constraintlayout.widget.ConstraintLayout>