<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="32dp"
    android:orientation="vertical">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp">

        <com.google.android.material.textfield.TextInputEditText
            style="@style/TextInput"
            android:id="@+id/searchInput"
            android:drawableStart="@drawable/search"
            android:drawablePadding="10dp"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="48dp"
            android:hint="@string/search_courses"
            android:background="@drawable/input_rounded"/>

        <Space
            android:layout_width="8dp"
            android:layout_height="wrap_content"/>

        <ImageButton
            android:id="@+id/filterIcon"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:contentDescription="@string/filter_button"
            android:src="@drawable/filter"
            android:background="@drawable/input_rounded"/>
    </LinearLayout>

    <TextView
        style="@style/TextRegular"
        android:id="@+id/sort_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sort_parameter"
        android:drawableEnd="@drawable/sort"
        android:gravity="center_vertical"
        android:drawablePadding="8dp"
        android:layout_gravity="end"
        android:paddingHorizontal="16dp"
        android:paddingVertical="8dp"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/courses_recycler_view"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:clipToPadding="false"
        android:paddingBottom="120dp"/>

</LinearLayout>