<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="12dp"
    app:cardCornerRadius="24dp"
    app:cardElevation="6dp"
    app:strokeWidth="0dp"
    app:rippleColor="?attr/colorControlHighlight"
    app:cardBackgroundColor="@color/background_dark_gray">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/imagePreview"
            android:layout_width="0dp"
            android:layout_height="180dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:cardCornerRadius="24dp"
            app:cardElevation="0dp"
            app:strokeWidth="0dp"
            app:cardBackgroundColor="@color/background_dark_gray">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="centerCrop"
                android:src="@drawable/cover" />

        </com.google.android.material.card.MaterialCardView>


        <LinearLayout
            android:id="@+id/rating_badge"
            android:layout_width="wrap_content"
            android:layout_height="36dp"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            app:layout_constraintBottom_toBottomOf="@id/imagePreview"
            app:layout_constraintStart_toStartOf="@id/imagePreview"
            android:layout_margin="12dp">

            <TextView
                android:id="@+id/rating"
                android:background="@drawable/badge_rounded"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/rating_example"
                android:textColor="@android:color/white"
                android:drawableStart="@drawable/star"
                android:drawablePadding="4dp"
                android:paddingHorizontal="8dp"
                android:paddingVertical="4dp"
                android:textSize="13sp"/>

            <TextView
                android:id="@+id/date"
                android:background="@drawable/badge_rounded"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/date_example"
                android:textColor="@android:color/white"
                android:paddingHorizontal="8dp"
                android:paddingVertical="4dp"
                android:textSize="13sp"
                android:layout_marginStart="6dp"/>
        </LinearLayout>

        <ImageButton
            android:id="@+id/favorite"
            android:background="@drawable/badge_rounded"
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:padding="8dp"
            android:src="@drawable/favorites"
            app:layout_constraintTop_toTopOf="@id/imagePreview"
            app:layout_constraintEnd_toEndOf="@id/imagePreview"
            android:layout_margin="12dp"/>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/contentLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@color/background_dark_gray"
            android:padding="16dp"
            app:layout_constraintTop_toBottomOf="@id/imagePreview"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <TextView
                android:id="@+id/title"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/title_example"
                style="@style/TextCourseTitle"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>

            <TextView
                android:id="@+id/description"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/description_example"
                style="@style/TextCourseDescription"
                android:ellipsize="end"
                android:maxLines="2"
                android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@id/title"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>

            <TextView
                android:id="@+id/price"
                android:text="@string/price_example"
                style="@style/TextCourseTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="14dp"
                app:layout_constraintTop_toBottomOf="@id/description"
                app:layout_constraintStart_toStartOf="parent"/>

            <TextView
                android:id="@+id/detail"
                android:text="@string/detail"
                style="@style/TextRegular"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="4dp"
                app:layout_constraintBaseline_toBaselineOf="@id/price"
                app:layout_constraintEnd_toStartOf="@id/detail_icon"/>

            <ImageView
                android:id="@+id/detail_icon"
                android:layout_width="12dp"
                android:layout_height="12dp"
                android:contentDescription="@string/detail_icon"
                android:src="@drawable/arrow"
                app:layout_constraintBottom_toBottomOf="@+id/detail"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/detail"
                app:layout_constraintVertical_bias="0.7"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</com.google.android.material.card.MaterialCardView>